kubernetes/.archive/janitorr/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: janitorr
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: janitorr

  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: bazarr
        - matchLabels:
            app.kubernetes.io/name: jellyseerr
        - matchLabels:
            app.kubernetes.io/name: radarr
        - matchLabels:
            app.kubernetes.io/name: sonarr
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: jellyfin
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
